0.0.10
* autosave bilidan path in input area
* regression: can not set biligui config
0.0.9
* make it themeable (external stylesheet .qss)
* clean module usage, don't need to create wrapper classes
* multithread Url fetch in BiliWeb
0.0.8
* fix: BiliSave will remove the Playlist!
* BiliUrl and Bangou (avXXXXXX) mix paste support
* Playlist now has its own dir
* add demo playlist "demo/demo.m3u8" for developers
* first attempt to provide Web feature
0.0.7
* asynchronously play (Qt::Process), GUI won't freeze anymore!
* fix issue#2, disable playButton when there's something playing
* fix: BiliPlaylist::BiliSave can't override old file
* bangou (avXXXXXX) paste support
0.0.6
* fix: forgot to have BiliPlaylist::BiliLoad functional
* initialize BiliWeb module, handling communication w/ bilibili.tv
* split common file functions to BiliFile module
* logo: add drop shadow
0.0.5
* switch to Tab layout for future features
* load/save bilibili playlist file.
0.0.4
* multl URLs support
* fix: click cancel in BilidanChoose will clear biligui.conf
0.0.3
* implement the local config system (BiliConfig.rb)
* you don't have to select Bilidan.py everytime
0.0.2
* decouple BiliDan and BiliGui
* add an option to choose Bilidan.py
* implement the error reporting system
0.0.1
* initial commit
* pretty basic, just paste a URL and calls BiliDan